Update instructions' script - Prevent anchor's target to be clipped by overflow

--- a/consignes.css
+++ b/consignes.css
@@ -887,10 +887,6 @@ code {
     @supports (position-area: start) {
         text-decoration: underline dotted currentColor;
     }
-
-    &:hover .tooltip {
-        opacity: 1;
-    }
 }
 
 .tooltip {
@@ -902,5 +898,10 @@ code {
     border-radius: 0.25rem;
     padding: 0.25rem 0.5rem;
     opacity: 0.05;
-    transition: opacity ease-in 150ms;
+    transition: opacity var(--ease-2) 150ms;
+    font-family: var(--font-family);
+
+    &:hover, &.visible {
+        opacity: 1;
+    }
 }
